add triangle arb

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/tes-minchan/abc_websocket#readme",
   "dependencies": {
     "bluebird": "^3.5.2",
+    "lodash": "^4.17.11",
     "redis": "^2.8.0",
     "ws": "^6.0.0"
   },
